--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,14 @@ body{
 }
 .input-search{
     flex: 0.8;
+    display: flex;
+}
+.search-line{
     background-image: url(../img/search.svg);
+    width: 100%;
+}
+.btn-search{
+    margin-left: 15px;
 }
 .buttons{
     display: flex;
@@ -99,4 +106,133 @@ body{
     font-size: 18px;
     line-height: 32px;
     color: #8C8C8C;
+}
+.modal-cart{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    display: none;
+    z-index: 999;
+}
+.modal-dialog {
+    max-width: 780px;
+    width: 95%;
+    background: #ffffff;
+    border-radius: 5px;
+    margin: auto;
+    padding: 40px 45px;
+}
+.modal-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 45px;
+}
+
+.modal-title {
+    margin: 0;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 42px;
+}
+
+.modal-close {
+    font-size: 36px;
+    border: none;
+    background-color: transparent;
+}
+.modal-body {
+    margin-bottom: 22px;
+}
+
+.modal-product-row {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #d9d9d9;
+    margin-bottom: 15px;
+}
+
+.modal-product-name {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 32px;
+}
+
+.modal-empty-title {
+    font-weight: normal;
+    font-size: 24px;
+}
+
+.modal-product-price {
+    margin-left: auto;
+    margin-right: 47px;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 32px;
+}
+
+.modal-product-counter {
+    display: flex;
+    align-items: center;
+}
+
+.modal-counter-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 39px;
+    height: 32px;
+    background: #ffffff;
+    border: 1px solid #40a9ff;
+    box-sizing: border-box;
+    border-radius: 2px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 22px;
+    color: #40a9ff;
+}
+
+.modal-counter-button:hover {
+    background: #40a9ff;
+    border: 1px solid #ffffff;
+    color: #ffffff;
+}
+
+.modal-counter {
+    font-size: 16px;
+    line-height: 24px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.modal-footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.modal-auth .modal-footer {
+    justify-content: flex-end;
+}
+
+.modal-footer-buttons {
+    display: flex;
+    align-items: center;
+}
+
+.modal-pricetag {
+    background: #262626;
+    border-radius: 5px;
+    color: #ffffff;
+    padding: 15px 20px;
+    font-size: 20px;
+    line-height: 23px;
+}
+
+.cart-is-open {
+    display: flex;
 }
